add content sharing read plug to read robot id

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -39,6 +39,12 @@ description: |
 grade: devel
 confinement: strict
 
+plugs:
+  common-content-read:
+    interface: content
+    content: readable-data
+    target: $SNAP_COMMON
+
 parts:
   local-files:
     plugin: dump
@@ -215,18 +221,22 @@ apps:
   recorder:
     command: usr/bin/record.sh
     daemon: simple
+    install-mode: disable
     extensions: [ros2-humble]
     plugs: [network, network-bind]
   synchronization:
     command: usr/bin/sync.sh
     daemon: simple
+    install-mode: disable
     timer: "00:00-24:00/288" # every 5 minutes
-    plugs: [network, network-bind]
+    plugs: [network, network-bind, common-content-read]
   daily-rotation:
     command: usr/bin/daily-rotation.sh
     daemon: simple
+    install-mode: disable
     timer: "00:00" # every day at midnight
   auto-clean:
     command: usr/bin/auto-clean.sh
     daemon: simple
+    install-mode: disable
     timer: "00:00-24:00/96" # every 15 minutes
