add disconnect plug, modify readme, introduce base-path

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -40,9 +40,8 @@ grade: devel
 confinement: strict
 
 plugs:
-  rob-cos-common-data-read:
+  rob-cos-common-read:
     interface: content
-    content: readable-data
     target: $SNAP_COMMON
 
 parts:
@@ -229,7 +228,7 @@ apps:
     daemon: simple
     install-mode: disable
     timer: "00:00-24:00/288" # every 5 minutes
-    plugs: [network, network-bind, rob-cos-common-data-read]
+    plugs: [network, network-bind, rob-cos-common-read]
   daily-rotation:
     command: usr/bin/daily-rotation.sh
     daemon: simple
