--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,21 +3,21 @@ base: core22
 version: git
 summary: ROS 2 data exporter
 description: |
-  The ROS 2 data exporter is recording ROS 2 data
-  and exporting them on a server for later consultation
+  The ROS 2 data exporter records ROS 2 data as rosbags
+  and exports them to an S3 server for later use.
 
-  Add you private ssh-key and config file for the storage server in:
+  Add your config file for the storage server in:
 
-   /root/snap/ros2-exporter-agent/common/.ssh/
+  /root/snap/ros2-exporter-agent/current/.config/rclone/rclone.conf
 
   The `config` file should look like:
 
   ```
   Host storage-server
-      User <server_user>
-      HostName <server_hostname>
-      IdentityFile /root/snap/ros2-exporter-agent/common/.ssh/<my_private_key>
-      UserKnownHostsFile /root/snap/ros2-exporter-agent/common/.ssh/known_hosts
+    User <server_user>
+    HostName <server_hostname>
+    IdentityFile /root/snap/ros2-exporter-agent/common/.ssh/<my_private_key>
+    UserKnownHostsFile /root/snap/ros2-exporter-agent/common/.ssh/known_hosts
   ```
 
   The daemon daily-rotation will move the bags to a new timestamped directory at midnight.
@@ -45,11 +45,11 @@ plugs:
     target: $SNAP_COMMON/configuration
 
 apps:
-  read-configuration:
-    command: usr/bin/read-configuration.sh
-    daemon: oneshot
+  daily-rotation:
+    command: usr/bin/daily-rotation.sh
+    daemon: simple
     install-mode: disable
-    before: [recorder]
+    timer: "00:00" # every day at midnight
   recorder:
     command: usr/bin/record.sh
     daemon: simple
@@ -60,16 +60,21 @@ apps:
     command: usr/bin/sync.sh
     daemon: simple
     install-mode: disable
-    timer: "00:00-24:00/720" # every 2 minutes
-    plugs: [network, network-bind, rob-cos-common-read]
-  daily-rotation:
-    command: usr/bin/daily-rotation.sh
-    daemon: simple
-    install-mode: disable
-    timer: "00:00" # every day at midnight
     timer: "00:00-24:00/288" # every 5 minutes
+    plugs: [network, network-bind]
 
 parts:
   ros2bag:
     plugin: colcon
     source: src/ros2bag_support
+  exporter-agent:
+    plugin: dump
+    source: snap/local/
+    organize:
+      '*.sh': usr/bin/
+      'start-services': usr/bin/
+      'stop-services': usr/bin/
+      'check-bucket': usr/bin/
+    stage-snaps:
+      - yq
+      - rclone
