--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -24,5 +24,5 @@ jobs:
     with:
       runs-on: '["ubuntu-latest", ["self-hosted", "linux", "ARM64", "medium", "noble"]]'
       git-ref: ${{ inputs.branch-name == '' && github.ref || inputs.branch-name }}
-      snap-track: track/0
+      snap-track: '0'
       snap-risk: candidate
