--- a/.github/workflows/snap.yaml
+++ b/.github/workflows/snap.yaml
@@ -22,5 +22,5 @@ jobs:
     secrets:
       snapstore-login: ${{ secrets.STORE_LOGIN }}
     with:
-      runs-on: '["ubuntu-latest", ["self-hosted", "linux", "ARM64", "medium", "noble"]]'
+      runs-on: '["ubuntu-latest", ["self-hosted", "linux", "ARM64", "large", "noble"]]'
       git-ref: ${{ inputs.branch-name == '' && github.ref || inputs.branch-name }}
